--- a/tictactoe.html
+++ b/tictactoe.html
@@ -17,16 +17,9 @@
 <h2>Set initial board:</h2>
 Select board:<select id="select-number-board" style="width:60px;">
 	<option value="3">3</option>
-	<option value="4">4</option>
-	<option value="5">5</option>
-	<option value="6">6</option>
-	<option value="7">7</option>
-	<option value="8">8</option>
-	<option value="9">9</option>
-	<option value="10">10</option>
-	<option value="50">50</option>
-	<option value="100">100</option>
 </select>
+<div id="message"></div>
+<br>
 <div id="myDivTable"></div>
 <br>
 <div id="ui_humanturn" style="display:none">
